More code quality improvements. Fix integer overflow in debug method formatDurationM().